package com.sights_detect.core.seekers.objects

import com.sights_detect.core.detections.Detection
import com.sights_detect.core.seekers.Seeker

interface ObjectSeeker: Seeker<Detection>